# Gamernt-Bot-Project

./: .env  .gitignore  .replit  InitalizeMongo.py  README.md  Un-Deleted Code.txt  botconfig.py  config.py  giveaway.drawio  log.txt  main.py  news.txt  pyproject.toml  report.txt  requirements.txt  setup.txt  test.py  webserver.py
.bin/: blueprint.drawio  log.txt  test.py  uno.drawio
DataPack/: fun.txt  games.txt  guild.db  help.txt  member.db  ows_game.db  points.txt  uno_game.db  utility.txt
DataPack/Help/: about_desc.txt  duelh.txt  fun.txt  games.txt  help.txt  help_file.txt  misc.txt  news.txt  owsh.txt  points.txt  settings.txt  utility.txt
GamePack/: battle.py  bingo.py  cardgame.py  choose.py  conquer.py  dice.py  duel.py  guessword.py  mining.py  ows.py  png.py  points.py  poll.py  randomizer.py  roulette.py  rps.py  slotmachine.py  tictactoe.py  uno.py  warewolf.py
Help/: about.txt  blackjack.txt  duelh.txt  help_file.txt  news.txt  ows_manual.txt  owsh.txt
InformationPack/: events.py  general.py  help.py  inventory.py  picture.py  profile.py
RPG/: adventure.py  battle.py  currency.py  experience.py  manager.py  manual.py  nnc.py  shop.py
RPGPackage/: RPGAttribute.py  RPGCharacter.py  RPGElemental.py  RPGEquipment.py  RPGItem.py  RPGModule.py  RPGMovement.py
Settings/: DbManager.py  Handler.py  MongoManager.py  MyUtility.py  StaticData.py  __init__.py  setting.py  tempCodeRunnerFile.py  webserver.py
api/: README.md
backup/: bingo.py  meme.py  ows.py  poll.py  survival.py  tictactoe.py  undercover.py  uno.py
